[gd_scene load_steps=58 format=3 uid="uid://overworld"]

[ext_resource type="Script" path="res://scripts/scenes/Overworld.gd" id="1_overworld"]
[ext_resource type="Script" path="res://scripts/player/Player.gd" id="2_player"]
[ext_resource type="Script" path="res://scripts/charlie/Charlie.gd" id="3_charlie"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="4_hud"]
[ext_resource type="Script" path="res://scripts/wildlife/WildlifeSpawner.gd" id="9_wildlife_spawner"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/player_spritesheet.png" id="5_player_sprite"]
[ext_resource type="Texture2D" path="res://assets/sprites/characters/charlie_spritesheet.png" id="6_charlie_sprite"]
[ext_resource type="SpriteFrames" path="res://assets/sprites/characters/charlie_sprite_frames.tres" id="7_charlie_frames"]
[ext_resource type="SpriteFrames" path="res://resources/sprites/player_frames.tres" id="8_player_frames"]
[ext_resource type="PackedScene" path="res://scenes/props/Tree.tscn" id="10_tree"]
[ext_resource type="Texture2D" path="res://assets/sprites/tiles/terrain_atlas.png" id="11_terrain"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1"]
texture = ExtResource("11_terrain")
texture_region_size = Vector2i(16, 16)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0

[sub_resource type="TileSet" id="TileSet_terrain"]
tile_size = Vector2i(16, 16)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(16, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_charlie"]
size = Vector2(18, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_house"]
size = Vector2(100, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_down"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_left"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_right"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_idle_up"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_1"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_2"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_down_3"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_1"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_2"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_left_3"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_1"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_2"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_right_3"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_1"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_2"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_charlie_walk_up_3"]
atlas = ExtResource("6_charlie_sprite")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_charlie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_down")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_left")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_right")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_idle_up")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_down_2")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_left_2")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_right_2")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_charlie_walk_up_2")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[node name="Overworld" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_overworld")

[node name="TerrainTileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_terrain")
format = 2

[node name="FallbackBackground" type="ColorRect" parent="."]
z_index = -2
offset_right = 2556.0
offset_bottom = 960.0
color = Color(0.3, 0.55, 0.25, 1)

[node name="Tree1" parent="." instance=ExtResource("10_tree")]
position = Vector2(540, 330)

[node name="Tree2" parent="." instance=ExtResource("10_tree")]
position = Vector2(680, 280)

[node name="Tree3" parent="." instance=ExtResource("10_tree")]
position = Vector2(500, 400)

[node name="Tree4" parent="." instance=ExtResource("10_tree")]
position = Vector2(900, 200)

[node name="Tree5" parent="." instance=ExtResource("10_tree")]
position = Vector2(1000, 150)

[node name="Tree6" parent="." instance=ExtResource("10_tree")]
position = Vector2(1100, 250)

[node name="Tree7" parent="." instance=ExtResource("10_tree")]
position = Vector2(1400, 100)

[node name="Tree8" parent="." instance=ExtResource("10_tree")]
position = Vector2(1500, 180)

[node name="Tree9" parent="." instance=ExtResource("10_tree")]
position = Vector2(1600, 120)

[node name="Tree10" parent="." instance=ExtResource("10_tree")]
position = Vector2(1450, 350)

[node name="Tree11" parent="." instance=ExtResource("10_tree")]
position = Vector2(1550, 400)

[node name="Tree12" parent="." instance=ExtResource("10_tree")]
position = Vector2(500, 600)

[node name="Tree13" parent="." instance=ExtResource("10_tree")]
position = Vector2(600, 650)

[node name="Tree14" parent="." instance=ExtResource("10_tree")]
position = Vector2(1700, 800)

[node name="Tree15" parent="." instance=ExtResource("10_tree")]
position = Vector2(1750, 850)

[node name="House" type="Area2D" parent="." groups=["interactable"]]
z_index = 10
position = Vector2(640, 320)
collision_layer = 32

[node name="Sprite" type="ColorRect" parent="House"]
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = 40.0
color = Color(0.6, 0.45, 0.35, 1)

[node name="Roof" type="ColorRect" parent="House"]
offset_left = -60.0
offset_top = -55.0
offset_right = 60.0
offset_bottom = -35.0
color = Color(0.5, 0.2, 0.2, 1)

[node name="Door" type="ColorRect" parent="House"]
offset_left = -12.0
offset_top = 15.0
offset_right = 12.0
offset_bottom = 40.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="Label" type="Label" parent="House"]
offset_left = -30.0
offset_top = 45.0
offset_right = 30.0
offset_bottom = 60.0
text = "House"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="House"]
shape = SubResource("RectangleShape2D_house")

[node name="HouseCollision" type="StaticBody2D" parent="House"]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="House/HouseCollision"]
shape = SubResource("RectangleShape2D_house")

[node name="Player" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(640, 400)
collision_layer = 2
collision_mask = 1
script = ExtResource("2_player")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = ExtResource("8_player_frames")
animation = &"idle_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_player")

[node name="InteractionArea" type="Area2D" parent="Player"]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = 0
limit_right = 426
limit_bottom = 240

[node name="Charlie" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(670, 415)
collision_layer = 4
collision_mask = 1
script = ExtResource("3_charlie")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Charlie"]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = ExtResource("7_charlie_frames")
animation = &"idle_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Charlie"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_charlie")

[node name="LeashLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.4, 0.3, 0.2, 1)

[node name="WildlifeSpawner" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("9_wildlife_spawner")

[node name="AmbientLight" type="CanvasModulate" parent="."]
color = Color(1, 1, 0.95, 1)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_hud")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
offset_right = 120.0
offset_bottom = 95.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BondingLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Bonding"

[node name="BondingBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="EntertainmentLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Entertainment"

[node name="EntertainmentBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "8:00 AM"

[node name="WeatherLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Clear - Spring"

[node name="InteractionPrompt" type="Label" parent="HUD"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "[E] Interact"
horizontal_alignment = 1

[node name="MessagePanel" type="Panel" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="MessageLabel" type="Label" parent="HUD/MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScreenLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "Screen: (1, 1)"
horizontal_alignment = 2
